editors/nvim/tree-sitter-quadrate/test/corpus/declarations.txt
================================================================================
Constant definition
================================================================================

const pi = 3.14159

--------------------------------------------------------------------------------

(source_file
  (constant_definition
    name: (identifier)
    value: (number)))

================================================================================
Use statement
================================================================================

use std
use math

--------------------------------------------------------------------------------

(source_file
  (use_statement
    module: (identifier))
  (use_statement
    module: (identifier)))

================================================================================
Mixed declarations
================================================================================

use std

const tau = 6.28

fn main( -- ) {
    tau print
}

--------------------------------------------------------------------------------

(source_file
  (use_statement
    module: (identifier))
  (constant_definition
    name: (identifier)
    value: (number))
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (identifier)
      (builtin_operation))))
================================================================================
Public constant definition
================================================================================

pub const MaxValue = 100
pub const Pi = 3.14159

--------------------------------------------------------------------------------

(source_file
  (constant_definition
    name: (identifier)
    value: (number))
  (constant_definition
    name: (identifier)
    value: (number)))

================================================================================
Test definition
================================================================================

test "simple test" {
    1 1 eq
}

--------------------------------------------------------------------------------

(source_file
  (test_definition
    keyword: (test_keyword)
    name: (string)
    body: (block
      (number)
      (number)
      (builtin_operation))))

================================================================================
Multiple test definitions
================================================================================

test "first test" {
    5 drop
}

test "second test" {
    "hello" drop
}

--------------------------------------------------------------------------------

(source_file
  (test_definition
    keyword: (test_keyword)
    name: (string)
    body: (block
      (number)
      (builtin_operation)))
  (test_definition
    keyword: (test_keyword)
    name: (string)
    body: (block
      (string)
      (builtin_operation))))
