editors/nvim/tree-sitter-quadrate/test/corpus/literals.txt
================================================================================
Integer literals
================================================================================

fn test( -- ) {
    0
    42
    1000
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (number))))

================================================================================
Float literals
================================================================================

fn test( -- ) {
    3.14
    0.5
    123.456
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (number))))

================================================================================
String literals
================================================================================

fn test( -- ) {
    "hello"
    "world"
    "escape \"quotes\""
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (string)
      (string)
      (string))))

================================================================================
Loop variable
================================================================================

fn test( -- ) {
    0 10 1 for {
        it
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (number)
      (for_loop
        body: (block
          (loop_variable))))))
