editors/nvim/tree-sitter-quadrate/test/corpus/locals.txt
================================================================================
Local variable declaration
================================================================================

fn test( x:i -- result:i ) {
    -> y
    y
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature
      (parameter_list
        (parameter name: (identifier) type: (type (identifier))))
      (parameter_list
        (parameter name: (identifier) type: (type (identifier)))))
    body: (block
      (local_declaration name: (identifier))
      (identifier))))

================================================================================
Multiple local variables
================================================================================

fn test( -- ) {
    10 -> x
    20 -> y
    x y add
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (local_declaration name: (identifier))
      (number)
      (local_declaration name: (identifier))
      (identifier)
      (identifier)
      (builtin_operation))))
