editors/nvim/tree-sitter-quadrate/test/corpus/new_features.txt
================================================================================
Type casting operations
================================================================================

fn test( -- ) {
    42 casti
    3.14 castf
    100 casts
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (builtin_operation)
      (number)
      (builtin_operation)
      (number)
      (builtin_operation))))

================================================================================
New stack operations
================================================================================

fn test( -- ) {
    10 20 dupd
    30 40 swapd
    50 60 overd
    70 80 nipd
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation))))

================================================================================
Bitwise operations
================================================================================

fn test( -- ) {
    8 2 lshift
    32 2 rshift
    5 3 xor
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation))))

================================================================================
Pointer operations
================================================================================

fn test( -- ) {
    100 -> ptr
    ptr @i
    200 ptr !i
    ptr @p
    ptr @f
    42 ptr !f
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (local_declaration
        name: (identifier))
      (identifier)
      (pointer_operation)
      (number)
      (identifier)
      (pointer_operation)
      (identifier)
      (pointer_operation)
      (identifier)
      (pointer_operation)
      (number)
      (identifier)
      (pointer_operation))))

================================================================================
Operator symbols
================================================================================

fn test( -- ) {
    1 2 +
    5 3 -
    4 2 *
    10 2 /
    10 3 %
    42 print
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (builtin_operation))))

================================================================================
Comparison operator symbols
================================================================================

fn test( -- ) {
    1 2 <
    1 2 >
    1 2 <=
    1 2 >=
    1 2 ==
    1 2 !=
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol))))

================================================================================
Threading operations
================================================================================

fn test( -- ) {
    spawn
    detach
    wait
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (builtin_operation)
      (builtin_operation)
      (builtin_operation))))

================================================================================
Error handling
================================================================================

fn test( -- ) {
    "Error message" error
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (string)
      (builtin_operation))))

================================================================================
New I/O operations
================================================================================

fn test( -- ) {
    nl
    read
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (builtin_operation)
      (builtin_operation))))
