editors/nvim/tree-sitter-quadrate/test/corpus/structs.txt
================================================================================
Basic struct definition
================================================================================

struct Vec2 {
  x:f64
  y:f64
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (struct_field
      name: (identifier)
      type: (type (identifier)))
    (struct_field
      name: (identifier)
      type: (type (identifier)))))

================================================================================
Public struct definition
================================================================================

pub struct Point {
  x:f64
  y:f64
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (struct_field
      name: (identifier)
      type: (type (identifier)))
    (struct_field
      name: (identifier)
      type: (type (identifier)))))

================================================================================
Struct with different field types
================================================================================

struct Person {
  name:str
  age:i64
  height:f64
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (struct_field
      name: (identifier)
      type: (type (identifier)))
    (struct_field
      name: (identifier)
      type: (type (identifier)))
    (struct_field
      name: (identifier)
      type: (type (identifier)))))

================================================================================
Struct construction and field access
================================================================================

fn test_vec2( -- ) {
  1.5 2.5 new Vec2 -> v
  v @x print
  v @y print
  v free
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (struct_construction
        type: (identifier))
      (local_declaration
        name: (identifier))
      (field_access
        variable: (identifier)
        field: (identifier))
      (builtin_operation)
      (field_access
        variable: (identifier)
        field: (identifier))
      (builtin_operation)
      (identifier)
      (builtin_operation))))

================================================================================
Multiple struct definitions
================================================================================

struct Vec2 {
  x:f64
  y:f64
}

struct Vec3 {
  x:f64
  y:f64
  z:f64
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (struct_field
      name: (identifier)
      type: (type (identifier)))
    (struct_field
      name: (identifier)
      type: (type (identifier))))
  (struct_definition
    name: (identifier)
    (struct_field
      name: (identifier)
      type: (type (identifier)))
    (struct_field
      name: (identifier)
      type: (type (identifier)))
    (struct_field
      name: (identifier)
      type: (type (identifier)))))

================================================================================
Struct with defer and free
================================================================================

fn cleanup_test( -- ) {
  1.0 2.0 new Vec2 -> v
  defer {
    v free
  }
  v @x print
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (struct_construction
        type: (identifier))
      (local_declaration
        name: (identifier))
      (defer_block
        body: (block
          (identifier)
          (builtin_operation)))
      (field_access
        variable: (identifier)
        field: (identifier))
      (builtin_operation))))

================================================================================
Struct construction with namespace
================================================================================

fn use_namespaced_struct( -- ) {
  1.0 2.0 new geometry::Vec2 -> v
  v @x print
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (struct_construction
        type: (namespaced_identifier
          namespace: (identifier)
          name: (identifier)))
      (local_declaration
        name: (identifier))
      (field_access
        variable: (identifier)
        field: (identifier))
      (builtin_operation))))
